remctl (3.13-1) UNRELEASED; urgency=medium

  * New upstream release.
    - remctl-shell now supports being run as a forced command.
    - The summary configuration option is now allowed for commands with
      subcommands other than ALL, passing in two arguments to the summary
      command.

 -- Russ Allbery <rra@debian.org>  Mon, 10 Oct 2016 19:23:31 -0700

remctl (3.12-1) unstable; urgency=medium

  * New upstream release.
    - New server implementation, remctl-shell, included in the
      remctl-server package, which is meant to be run as the shell of a
      dedicated user via ssh and supports the same configuration as
      remctld.  (This may eventually move into a separate package; if you
      would like to see that, file a bug.)
    - New server configuration option, sudo, which says to change users
      with sudo when running the command.
  * Hard-code the path to sudo in the build so that the sudo package
    doesn't have to be installed when building the package.
  * Switch to the new comment character for php-remctl.ini.
  * Switch to https for all package metadata URLs.
  * Remove now-unneeded source Lintian override.
  * Update standards version to 3.9.8 (no changes required).

 -- Russ Allbery <rra@debian.org>  Fri, 29 Jul 2016 13:23:57 -0700

remctl (3.11-1) unstable; urgency=medium

  * New upstream release.
    - Port to PHP 7.  (Closes: #821713)
  * Convert packaging to use dh_php and build php-remctl instead of
    php5-remctl (and provide php7.0-remctl).  There is no upgrade path
    defined from php5-remctl, since that seems to be the way other PHP
    packages are being handled during the upgrade.
  * Switch to the DEP-14 branch layout and update debian/gbp.conf and
    Vcs-Git accordingly.
  * Belatedly bump shlibs for interfaces added in remctl 3.3.

 -- Russ Allbery <rra@debian.org>  Sat, 07 May 2016 15:15:46 -0700

remctl (3.10-1) unstable; urgency=medium

  * New upstream release.